# zipcast-epub

./: .gitignore  README.md  pyproject.toml  run_local.py
colab/: generate.py  requirements.txt  webapp.py
colab/static/: app.js  index.html  style.css
notebooks/: colab_zipcast_qwen3tts.ipynb  kaggle_zipcast_qwen3tts.ipynb
zipcast/: __init__.py  cli.py  epub_parser.py  pack.py
