[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zipcast"
version = "0.1.0"
description = "epub parsing library shared with the Colab notebook (no CLI -- imported directly from the cloned repo)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["zipcast*"]
